use JWT_BEARER_BUILDER